Resolve blocking issues and add endpoint for getting messages by Ids.